SERVER-21639 set ResultFlag_ShardConfigStale on OP_QUERY command replies if needed in LegacyReplyBuilder